--- a/src/static/sccs/_vars.scss
+++ b/src/static/sccs/_vars.scss
@@ -3,11 +3,13 @@ $main:      #161616;
 $secondary: #101010;
 $postGray:  #1d1d1d;
 $gray:      #373737;
+$afterGray: #7e7e7e;
 $postWhite: #d7d7d7;
 $white:     #f0f0f0;
 
-$gradient:   linear-gradient(135deg, rgb(92, 14, 225) 0%, rgba(119,17,162, 1) 100%);
+$gradient:    linear-gradient(135deg, rgb(92, 14, 225) 0%, rgba(119,17,162, 1) 100%);
 $contrast:  #5c0ee1;
+$disabel:   #644f87;
 
 $warning:   #ca2222;
 
