--- a/src/components/common/Buttons/button.scss
+++ b/src/components/common/Buttons/button.scss
@@ -14,6 +14,10 @@
   &-unfollow {
     border: .2rem solid $warning;
 
+    &:disabled {
+      border: 0.2rem solid darken($warning, 15%) !important;
+    }
+
     &:hover {
       box-shadow: 0 0 1rem lighten($warning, 5%) !important;
     }
@@ -21,5 +25,10 @@
 
   &:hover {
     box-shadow: 0 0 1rem lighten($contrast, 5%);
+  }
+
+  &:disabled {
+    border: 0.2rem solid darken($contrast, 15%);
+    color: darken($white, 40%);
   }
 }
